<resources>
    <string name="app_name">GeoApp</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="add_text">Add</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_gps_settings">GPS Settings</string>
    <string name="menu_all">All</string>
    <string name="menu_active">Active</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_pref">Main settings</string>
    <string name="transition_settings">Transition settings</string>
    <string name="menu_settings_geo">Geofence Settings</string>
    <string name="menu_highlight">Highlight</string>
    <string name="menu_geo_options">Options</string>
    <string name="menu_geo_delete">Delete</string>
    <string name="activate">Activate</string>
    <string name="notification">Notification</string>
    <string name="notification_hide">Notifi autohide</string>
    <string name="text_radius">Radius: </string>
    <string name="text_latitude">Latitude: </string>
    <string name="text_longitude">Longitude: </string>
    <string name="text_transition">Transition type: </string>
    <string name="text_transition_enter">Enter: </string>
    <string name="text_transition_exit">Exit: </string>
    <string name="text_transition_dwell">Dwell: </string>
    <string name="text_connection_dialog">You need internet connection for this action</string>
    <string name="button_wifi_settings">WiFi Settings</string>
    <string name="text_cancel">Cancel</string>
</resources>
