<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/alert_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/no_internet" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_connection_dialog"
        android:textSize="20dp" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">
      <Button
        android:id="@+id/dismiss_dialog_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorOrange"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/text_cancel" />
    <Button
        android:id="@+id/wifi_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorOrange"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/button_wifi_settings" />
    </LinearLayout>
</LinearLayout>