<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/text_radius_set_dialog_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_radius"
        android:layout_marginLeft="5dp"
        android:textSize="25dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/edit_text_radius_set_dialog_options"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/text_radius_set_dialog_options"/>
    <TextView
        android:id="@+id/text_type_transition_dialog_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_transition"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_radius_set_dialog_options"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginStart="5dp" />
    <TextView
        android:id="@+id/text_transition_enter_dialog_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_transition_enter"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/text_type_transition_dialog_options"/>
    <CheckBox android:id="@+id/cb_transition_enter_dialog_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toRightOf="@+id/text_transition_enter_dialog_options"
        app:layout_constraintTop_toBottomOf="@+id/text_type_transition_dialog_options"
        />
    <TextView
        android:id="@+id/text_transition_exit_dialog_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_transition_exit"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        app:layout_constraintLeft_toRightOf="@+id/cb_transition_enter_dialog_options"
        app:layout_constraintTop_toBottomOf="@+id/text_type_transition_dialog_options"/>
    <CheckBox android:id="@+id/cb_transition_exit_dialog_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toRightOf="@+id/text_transition_exit_dialog_options"
        app:layout_constraintTop_toBottomOf="@+id/text_type_transition_dialog_options"
        />
    <TextView
        android:id="@+id/text_transition_dwell_dialog_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_transition_dwell"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        app:layout_constraintLeft_toRightOf="@+id/cb_transition_exit_dialog_options"
        app:layout_constraintTop_toBottomOf="@+id/text_type_transition_dialog_options"/>
    <CheckBox android:id="@+id/cb_transition_dwell_dialog_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toRightOf="@+id/text_transition_dwell_dialog_options"
        app:layout_constraintTop_toBottomOf="@+id/text_type_transition_dialog_options"
        />

    <Button
        android:id="@+id/dialog_options_ok"
        android:text="OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorOrange"
        app:layout_constraintTop_toBottomOf="@+id/cb_transition_dwell_dialog_options"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
        android:id="@+id/dialog_options_cancel"
        android:text="CANCEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorOrange"
        app:layout_constraintTop_toBottomOf="@+id/cb_transition_dwell_dialog_options"
        app:layout_constraintRight_toLeftOf="@+id/dialog_options_ok"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    </android.support.constraint.ConstraintLayout>